# python-minecraft

./: .gitignore  Exercise  3 -- Basic Python Syntax.ipynb  Exercise  4 -- Change the Minecraft world using Python.ipynb  Exercise  5 -- Minecraft changes trigger activity in Python.ipynb  Getting Started with IPython.ipynb  Hello World!.ipynb  LICENSE  README.md  README.rst  SETUP_README.md  Vagrantfile  blink.py  clear.py  fabfile.py  hello_world.py  pileup.py  pyramid.py  requirements.txt  sample_config.yaml  setup.py  tower.py  tower2.py
classroom-code/: Click here to get started with the class!.ipynb
docs/: Makefile  conf.py  contents.rst  glossary.rst  index.rst  make.bat  release-notes.rst
examples/: astrotutor_magic.ipynb  blink.ipynb  brooksc_findpos.ipynb  brooksc_flatmap50.ipynb  brooksc_teleport_pad.ipynb  brooksc_template.ipynb  brooksc_tntsnake.ipynb  build some walls.ipynb  burnaron_bunkermatic.ipynb  burnaron_bunkermatic2.ipynb  clear.ipynb  coderdojo.ipynb  danielbates_minecraft_basic.ipynb  danielbates_setblockdemo.ipynb  davef21370_maze.ipynb  daviewales_minesweeper.ipynb  fleap_railgen.ipynb  flying.ipynb  gf_clearZone.ipynb  gf_drawbuilding.ipynb  gf_helloworld.ipynb  hello.ipynb  pileup.ipynb  (+25 more)
lab-server/controller/: .gitignore  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py
lab-server/controller/cliffuni/: formatters.py
lab-server/controller/lsc/: __init__.py  config.py  shell.py
lab-server/controller/lsc/commands/: controlsheet.py  environment.py  lab.py
lab-server/controller/lsc/model/: controlsheet.py  instance.py  sheet.py
(+142 files in other folders)
