[metadata]
name = lsc
summary = CoderDojo Twin Cities, Python-Minecraft, Lab Server Controller
description-file =
    README.rst
author = Mike McCallister
author-email = mike@mccllstr.com
home-page = https://github.com/mikemccllstr/python-minecraft
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    lsc
    cliffuni

[entry_points]
console_scripts =
    lsc = lsc.shell:main

lsc.commands =
    test = lsc.commands.environment:Test

    show = lsc.commands.controlsheet:Show

cliff.formatter.list =
    unicsv = cliffuni.formatters:UniCsvFormatter

cliff.formatter.show =
    unicsv = cliffuni.formatters:UniCsvFormatter
